--- a/New folder (2)/home_index.html
+++ b/New folder (2)/home_index.html
@@ -11,7 +11,7 @@
     <div class="blank">VIDHULAA<br>NAGENDRAN</div>
         <div class="header">
             <div class="header_blank1"></div>
-            <a href="/about_index.html"><div class="b_about hover">ABOUT</div></a>
+            <a href="about_index.html"><div class="b_about hover">ABOUT</div></a>
             
                     <a href="#foot"><div class="b_about hover">CONTACT</div></a>
             
@@ -23,24 +23,24 @@
         <div class="projects">
             <div class="grid1"></div>
             <div class="grid2 hover">
-                <a href="/proj2_index.html"><img src="/public/pics/home_pics/CUSTOMER EXPERIENCE FINAL.png"></a>
+                <a href="/proj2_index.html"><img src="CUSTOMER EXPERIENCE FINAL.png"></a>
             </div>
             <div class="grid3 hover">
-                <img src="/public/pics/home_pics/poster.png">
+                <img src="poster.png">
             </div> 
             <div class="grid4 hover">
-                <img src="/public/pics/home_pics/poster 2.png">
+                <img src="poster 2.png">
             </div>
             <div class="grid5"></div>
             <div class="grid6"></div>
             <div class="grid7 hover">
-                <a href="/proj1_index.html"><img src="/public/pics/home_pics/mobile ui.png"></a>
+                <a href="/proj1_index.html"><img src="mobile ui.png"></a>
             </div>
             <div class="grid8 hover"> 
-                <img src="/public/pics/home_pics/brochure.png">
+                <img src="brochure.png">
             </div>
             <div class="grid9 hover">
-                <img src="/public/pics/home_pics/packaging.png">
+                <img src="packaging.png">
             </div>
             <div class="grid10"></div>
         </div>
@@ -53,13 +53,13 @@
                     <div class="footer_logo">
                         <div class="f_blank1"></div>
                         <div class="behance">
-                            <img src="/public/pics/home_pics/facebook-logo.png">
+                            <img src="facebook-logo.png">
                         </div>
                         <div class="instagram">
-                            <img src="/public/pics/home_pics/instagram-logo.png">
+                            <img src="instagram-logo.png">
                         </div>
                         <div class="twittter">
-                            <img src="/public/pics/home_pics/twitter.png">
+                            <img src="twitter.png">
                         </div>
                         <div class="f_blank2"></div>
                     </div>
