--- a/New folder (2)/proj1_index.html
+++ b/New folder (2)/proj1_index.html
@@ -22,7 +22,7 @@
         <div class="proj1_container">
             <div class="proj_con1"></div>
             <div class="proj_con2">
-                <img src="/public/pics/proj1_pics/FINAL PRESENTATION final.png">
+                <img src="FINAL PRESENTATION final.png">
             </div>
             <div class="proj_con3"></div>
         </div>
@@ -34,13 +34,13 @@
                     <div class="footer_logo">
                         <div class="f_blank1"></div>
                         <div class="behance">
-                            <img src="/public/pics/proj1_pics/facebook-logo.png">
+                            <img src="facebook-logo.png">
                         </div>
                         <div class="instagram">
-                            <img src="/public/pics/proj1_pics/instagram-logo.png">
+                            <img src="instagram-logo.png">
                         </div>
                         <div class="twittter">
-                            <img src="/public/pics/proj1_pics/twitter.png">
+                            <img src="twitter.png">
                         </div>
                         <div class="f_blank2"></div>
                     </div>
