--- a/New folder (2)/proj2_index.html
+++ b/New folder (2)/proj2_index.html
@@ -34,13 +34,13 @@
                     <div class="footer_logo">
                         <div class="f_blank1"></div>
                         <div class="behance">
-                            <img src="/public/pics/proj2_pics/facebook-logo.png">
+                            <img src="facebook-logo.png">
                         </div>
                         <div class="instagram">
                             <img src="/public/pics/proj2_pics/instagram-logo.png">
                         </div>
                         <div class="twittter">
-                            <img src="/public/pics/proj2_pics/twitter.png">
+                            <img src="twitter.png">
                         </div>
                         <div class="f_blank2"></div>
                     </div>
