--- a/New folder (2)/home_index.html
+++ b/New folder (2)/home_index.html
@@ -4,7 +4,7 @@
     <meta name="author" content="Vidhulaa">
     <meta name="key" content="Mysite">
     <meta name="viewport" content="shrink-to-fit, initial scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link rel="stylesheet" href="/public/css/home_style.css">
+    <link rel="stylesheet" href="New folder (2)/public/css/home_style.css">
    
    </head>
    <body>
